Part 2: add sorting with rating-preserving links

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -10,8 +10,31 @@
       <%= label_tag "ratings_#{rating}", rating, class: 'form-check-label' %>
     </div>
   <% end %>
+
+  <div class="mt-3 mb-2">
+    <label class="form-label me-2" for="sort_by">Sort by:</label>
+    <%= select_tag :sort_by,
+                   options_for_select([['Title','title'],
+                                       ['Release date','release_date']], @sort_by),
+                   id: 'sort_by',
+                   class: 'form-select d-inline w-auto' %>
+  </div>
+
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
+<% ratings_hash = @ratings_to_show.to_h { |r| [r, '1'] } %>
+
+<div class="mb-3">
+  <span class="me-2">Quick sort:</span>
+  <%= link_to 'Title',
+              movies_path(sort_by: 'title',        ratings: ratings_hash),
+              id: 'sort_title' %>
+  |
+  <%= link_to 'Release date',
+              movies_path(sort_by: 'release_date', ratings: ratings_hash),
+              id: 'sort_release_date' %>
+</div>
+
 
 <div id="movies">
   <% @movies.each do |movie| %>
